<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smart_home_pytree</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="olaghattas@hotmail.com">olagh</maintainer>
  <license>TODO: License declaration</license>

  <!-- robot dependencies -->
  <depend>shr_msgs</depend>
  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  
  <depend>geometry_msgs</depend>

  <!-- not sure if needed dependencies -->
  <build_depend>python3-setuptools</build_depend>
  <build_depend>pyqt5-dev-tools</build_depend>
  <build_depend>qttools5-dev-tools</build_depend>

  <!-- tree dependencies -->
  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <!-- <exec_depend>py_trees_ros_interfaces</exec_depend> -->
  <exec_depend>rcl_interfaces</exec_depend>
  <!-- <exec_depend>rclpy</exec_depend> -->
  <!-- <exec_depend>std_msgs</exec_depend> -->

  <!-- default dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
